<resources>
    <string name="app_name">notifikasi</string>
    <string name="notification">Notification</string>
    <string name="calender">Calender</string>
    <string name="checkbox1">CheckBox</string>
    <string name="add">+</string>
    <string name="calendar">Calendar</string>
    <string name="text1">notification</string>
    <string name="notification_clear">Notification</string>
    <string name="home">home</string>
    <string name="plus">Button</string>
    <string name="tambah">+</string>
    <string name="_27">27</string>
    <string name="go_to_home_freind_s">Go to home freind\'s</string>
    <string name="homee">Home</string>
    <string name="meet_sister">Meet sister</string>
    <string name="eat_breakfast">Eat breakfast</string>
    <string name="wake_up">Wake up</string>
    <string name="todo">TODO</string>
    <string name="you_have_no_notification">You have no notification.</string>
    <string name="dustbin">TODO</string>
    <string name="next">TODO</string>
    <string name="next2">TODO</string>
    <string name="next2">TODO</string>
    <string name="hari">TextView</string>
    <string name="harii">TUESDAY</string>
    <string name="tanggal">TextView</string>
    <string name="_28">28</string>
    <string name="_37_minutes_ago">37 Minutes ago</string>
    <string name="_7_hours_ago">7 Hours ago</string>
    <string name="done">Done</string>
    <string name="done">Done</string>
    <string name="_6_hours_ago">6 Hours ago</string>
    <string name="eat_breakfast">Eat breakfast</string>
    <string name="missed">Missed</string>
    <string name="wash_the_dishes">Wash the dishes</string>
    <string name="_6_hours_ago">6 Hours ago</string>
    <string name="done">Done</string>
    <string name="done">Done</string>
    <string name="_4_hours_ago">4 Hours ago</string>
    <string name="_1_hours_ago">1 Hours ago</string>
    <string name="status">Status</string>
    <string name="dustbin">TODO</string>
    <string name="new_task">TODO</string>
    <string name="navigation_bell">TODO</string>
    <string name="cal">TODO</string>
    <string name="todo">TODO</string>
    <string name="_29">29</string>
    <string name="_28">28</string>
    <string name="_27">27</string>
    <string name="_22_00">22.00</string>
    <string name="_4_hours_ago">4 Hours ago</string>
    <string name="meet_sister">Meet sister</string>
    <string name="nav_calender">cal</string>
    <string name="_16_00">16.00</string>
</resources>